fix: attempt 1 - scrollbars both appear but the padding is imperfect

--- a/packages/salesforcedx-vscode-soql/src/soql-data-view/queryDataView.css
+++ b/packages/salesforcedx-vscode-soql/src/soql-data-view/queryDataView.css
@@ -9,8 +9,27 @@
 This file can be used to override Tabulator CSS
 for custom styling http://tabulator.info/docs/4.8/style
 */
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+  margin: 0;
+}
+
 body {
   font-family: var(--vscode-font-family, Arial, Helvetica, sans-serif);
+}
+
+body > div {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+#data-table {
+  flex: 1;
+  min-height: 0;
+  overflow: auto;
 }
 
 :root {
